[package]
name = "dolly"
description = "my personal matrix bot"
version = "0.0.1"
edition = "2024"
license = "zlib"
authors = ["Diogo Castro (https://diogocastro.net)"]
readme = "README.md"
homepage = "https://codeberg.org/diogocastro/dolly"
repository = "https://codeberg.org/diogocastro/dolly"

[dependencies]
axum = "0.8"
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
matrix-sdk = { version = "0.18", default-features = false, features = ["sqlite", "anyhow"] }
anyhow = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
